--- a/test-output/old/Data Driven Test/reporter-output.html
+++ b/test-output/old/Data Driven Test/reporter-output.html
@@ -1,1 +1,25 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td><a href=Mon_Apr_19_13_15_47_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_15_47_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_15_47_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_16_06_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_16_06_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_16_06_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_16_25_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_16_25_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_16_25_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_16_45_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_16_45_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_16_45_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_17_04_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_17_04_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_17_04_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_17_24_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_17_24_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_17_24_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_17_43_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_17_43_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_17_43_IST_2021.jpg height=200 width=200></a></td></tr>
+<tr><td><a href=Mon_Apr_19_13_18_02_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
+<tr><td><br></td></tr>
+<tr><td><a href=Mon_Apr_19_13_18_02_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_13_18_02_IST_2021.jpg height=200 width=200></a></td></tr>
+</table>
