The commit after changing xpath

--- a/test-output/old/Data Driven Test/reporter-output.html
+++ b/test-output/old/Data Driven Test/reporter-output.html
@@ -1,25 +1,1 @@
-<h2>Reporter output</h2><table><tr><td><a href=Mon_Apr_19_18_55_12_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_55_12_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_55_12_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_55_32_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_55_32_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_55_32_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_55_51_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_55_51_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_55_51_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_56_11_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_56_11_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_56_11_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_56_31_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_56_31_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_56_31_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_56_50_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_56_50_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_56_50_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_57_10_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_57_10_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_57_10_IST_2021.jpg height=200 width=200></a></td></tr>
-<tr><td><a href=Mon_Apr_19_18_57_29_IST_2021.jpg target="_blank">Screenshot link</a></td></tr>
-<tr><td><br></td></tr>
-<tr><td><a href=Mon_Apr_19_18_57_29_IST_2021.jpg target="_blank"><img src=Mon_Apr_19_18_57_29_IST_2021.jpg height=200 width=200></a></td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
